# fortchem

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  fpm.toml
cmake/: install_prefix.cmake  set_options.cmake
src/: CMakeLists.txt  fortchem.f90  math_mods.f90  physchem_consts.f90  unit_params.f90
